--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,20 +14,26 @@ services:
     command: >
           sh -c "python manage.py collectstatic --noinput &&
                  python manage.py migrate &&
-                 gunicorn --bind 0.0.0.0:8000 core.wsgi"
+                 uvicorn core.asgi:application --host 0.0.0.0 --reload"
     env_file:
       - .env
     ports:
       - 8000:8000
     expose:
       - 8000
+    links:
+      - redis
     depends_on:
       - redis
+    
     
 
   redis:
     image: redis:alpine
     hostname: redis
+    expose:
+      - 6379
+  
    
 
   celery:
@@ -36,7 +42,7 @@ services:
     env_file:
       - .env
     command: >
-      sh -c 'celery -A core worker -l info'
+      sh -c 'celery -A core.celery_conf worker -l info'
     volumes:
       - .:/enactus
     links:
