--- a/docker_nginx/nginx/nginx.conf
+++ b/docker_nginx/nginx/nginx.conf
@@ -12,6 +12,8 @@ server {
         proxy_pass http://main_api;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
         proxy_redirect off;
     }
 
