--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,6 +59,9 @@ services:
     container_name: nginx
     image: nginx
     volumes:
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
+      - etc-letsencrypt:/etc/letcsencrypt
       - static_volume:/enactus/static
       - media_volume:/enactus/media
     depends_on:
@@ -68,11 +71,22 @@ services:
       - "443:443"
     restart: always
 
+  # certbot:
+  #   image: certbot/certbot
+  #   container_name: certbot
+  #   volumes: 
+  #     - ./certbot/conf:/etc/letsencrypt
+  #     - ./certbot/www:/var/www/certbot
+  #   command: certonly --webroot -w /var/www/certbot --force-renewal --email lalavitohack@gmail.com -d enactusanimals.com --agree-tos
+
+
 
 volumes: 
   static_volume:
   media_volume:
   db_volume:
+  etc-letsencrypt:
+  certbot:
 
 
 
