fixed announcement photo in profile, added short description on news

--- a/docker_nginx/nginx/https.conf
+++ b/docker_nginx/nginx/https.conf
@@ -11,8 +11,8 @@ server {
     listen 443 ssl http2;
     server_name enactusanimals.com;
 
-    ssl_certificate /etc/letsencrypt/live/enactusanimals.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/enactusanimals.com/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/zoonet.me/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/zoonet.me/privkey.pem;
 
     root /var/www/html;
     index index.php index.html index.htm;
