--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,14 @@ version: '3.3'
 
 services:
 
+  db:
+    image: postgres:14.7
+    container_name: db
+    env_file:
+      - .env
+    volumes: 
+      - db:/var/lib/postgresql/data
+
   main_api:
     build:
       dockerfile: Dockerfile
@@ -33,8 +41,6 @@ services:
     hostname: redis
     expose:
       - 6379
-  
-   
 
   celery:
     build: 
@@ -50,7 +56,6 @@ services:
     depends_on:
       - redis
       - main_api
-
 
   nginx:
     build: 
@@ -79,12 +84,10 @@ services:
   #     - ./certbot/www:/var/www/certbot
   #   command: certonly --webroot -w /var/www/certbot --force-renewal --email lalavitohack@gmail.com -d enactusanimals.com --agree-tos
 
-
-
 volumes: 
   static_volume:
   media_volume:
-  db_volume:
+  db:
   etc-letsencrypt:
 
 
