--- a/docker_nginx/nginx/https.conf
+++ b/docker_nginx/nginx/https.conf
@@ -9,10 +9,10 @@ server {
 
 server {
     listen 443 ssl http2;
-    server_name enactusanimals.com;
+    server_name zoointer.net;
 
-    ssl_certificate /etc/letsencrypt/live/zoonet.me/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/zoonet.me/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/zoointer.net/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/zoointer.net/privkey.pem;
 
     root /var/www/html;
     index index.php index.html index.htm;
