--- a/docker_nginx/nginx/nginx.conf
+++ b/docker_nginx/nginx/nginx.conf
@@ -3,18 +3,28 @@ upstream main_api {
 }
 
 server {
-
     listen 80;
-    large_client_header_buffers 8 64k;
-    
+    return 301 https://$host$request_uri;
+}
+
+server {
+    listen 443 ssl http2;
+    server_name zoointer.net;
+
+    ssl_certificate /etc/letsencrypt/live/zoointer.net/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/zoointer.net/privkey.pem;
+
+    root /var/www/html;
+    index index.php index.html index.htm;
+
     location / {
-        include proxy_params;
         proxy_pass http://main_api;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
+
+        # Enables WS support
+        proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
-        proxy_redirect off;
     }
 
     location /static/ {
@@ -23,5 +33,10 @@ server {
 
     location /media/ {
         alias /enactus/media/;
+    }
+
+    location ~ /\.well-known/acme-challenge {
+        allow all;
+        root /var/www/certbot;
     }
 }
